crates/parser/tests/snapshots/prefix_block/after_entry.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/after_entry

## Input

```
before hello
section {
  key value
}
after world

```

## CST

```
SOURCE_FILE@0..49
  ENTRY@0..12
    WORD_KEY@0..6
      WORD@0..6 "before"
    SPACE@6..7 " "
    LINE_STRING@7..12
      STRING@7..12 "hello"
  NEWLINE@12..13 "\n"
  PREFIX_BLOCK@13..37
    WORD_KEY@13..20
      WORD@13..20 "section"
    SPACE@20..21 " "
    OPEN_BRACE@21..22 "{"
    NEWLINE@22..23 "\n"
    SPACE@23..25 "  "
    ENTRY@25..34
      WORD_KEY@25..28
        WORD@25..28 "key"
      SPACE@28..29 " "
      LINE_STRING@29..34
        STRING@29..34 "value"
    NEWLINE@34..35 "\n"
    CLOSE_BRACE@35..36 "}"
    NEWLINE@36..37 "\n"
  ENTRY@37..48
    WORD_KEY@37..42
      WORD@37..42 "after"
    SPACE@42..43 " "
    LINE_STRING@43..48
      STRING@43..48 "world"
  NEWLINE@48..49 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..6 "before",
            },
            value: LineString {
                string: STRING@7..12 "hello",
            },
        },
        PrefixBlock {
            key: WordKey {
                word: WORD@13..20 "section",
            },
            open_brace: OPEN_BRACE@21..22 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@25..28 "key",
                    },
                    value: LineString {
                        string: STRING@29..34 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@35..36 "}",
        },
        Entry {
            key: WordKey {
                word: WORD@37..42 "after",
            },
            value: LineString {
                string: STRING@43..48 "world",
            },
        },
    ],
}
```

vim:ft=markdown
