crates/parser/tests/snapshots/prefix_block/basic.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/basic

## Input

```
section {
  .key value
  .name hello
}

```

## CST

```
SOURCE_FILE@0..39
  PREFIX_BLOCK@0..39
    WORD_KEY@0..7
      WORD@0..7 "section"
    SPACE@7..8 " "
    OPEN_BRACE@8..9 "{"
    NEWLINE@9..10 "\n"
    SPACE@10..12 "  "
    ENTRY@12..22
      WORD_KEY@12..16
        WORD@12..16 ".key"
      SPACE@16..17 " "
      LINE_STRING@17..22
        STRING@17..22 "value"
    NEWLINE@22..23 "\n"
    SPACE@23..25 "  "
    ENTRY@25..36
      WORD_KEY@25..30
        WORD@25..30 ".name"
      SPACE@30..31 " "
      LINE_STRING@31..36
        STRING@31..36 "hello"
    NEWLINE@36..37 "\n"
    CLOSE_BRACE@37..38 "}"
    NEWLINE@38..39 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..7 "section",
            },
            open_brace: OPEN_BRACE@8..9 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@12..16 ".key",
                    },
                    value: LineString {
                        string: STRING@17..22 "value",
                    },
                },
                Entry {
                    key: WordKey {
                        word: WORD@25..30 ".name",
                    },
                    value: LineString {
                        string: STRING@31..36 "hello",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@37..38 "}",
        },
    ],
}
```

vim:ft=markdown
