crates/parser/tests/snapshots/prefix_block/close_brace_as_key.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/close_brace_as_key

## Input

```
section {
  } value
}

```

## CST

```
SOURCE_FILE@0..22
  PREFIX_BLOCK@0..22
    WORD_KEY@0..7
      WORD@0..7 "section"
    SPACE@7..8 " "
    OPEN_BRACE@8..9 "{"
    NEWLINE@9..10 "\n"
    SPACE@10..12 "  "
    ENTRY@12..19
      WORD_KEY@12..13
        WORD@12..13 "}"
      SPACE@13..14 " "
      LINE_STRING@14..19
        STRING@14..19 "value"
    NEWLINE@19..20 "\n"
    CLOSE_BRACE@20..21 "}"
    NEWLINE@21..22 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..7 "section",
            },
            open_brace: OPEN_BRACE@8..9 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@12..13 "}",
                    },
                    value: LineString {
                        string: STRING@14..19 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@20..21 "}",
        },
    ],
}
```

vim:ft=markdown
