crates/parser/tests/snapshots/prefix_block/empty_with_eof.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/empty_with_eof

## Input

```
section {
}
```

## CST

```
SOURCE_FILE@0..11
  PREFIX_BLOCK@0..11
    WORD_KEY@0..7
      WORD@0..7 "section"
    SPACE@7..8 " "
    OPEN_BRACE@8..9 "{"
    NEWLINE@9..10 "\n"
    CLOSE_BRACE@10..11 "}"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..7 "section",
            },
            open_brace: OPEN_BRACE@8..9 "{",
            items: [],
            close_brace: CLOSE_BRACE@10..11 "}",
        },
    ],
}
```

vim:ft=markdown
