crates/parser/tests/snapshots/prefix_block/multiple.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/multiple

## Input

```
first {
  a 1
}
second {
  b 2
}

```

## CST

```
SOURCE_FILE@0..33
  PREFIX_BLOCK@0..16
    WORD_KEY@0..5
      WORD@0..5 "first"
    SPACE@5..6 " "
    OPEN_BRACE@6..7 "{"
    NEWLINE@7..8 "\n"
    SPACE@8..10 "  "
    ENTRY@10..13
      WORD_KEY@10..11
        WORD@10..11 "a"
      SPACE@11..12 " "
      INTEGER@12..13
        NUMERAL@12..13 "1"
    NEWLINE@13..14 "\n"
    CLOSE_BRACE@14..15 "}"
    NEWLINE@15..16 "\n"
  PREFIX_BLOCK@16..33
    WORD_KEY@16..22
      WORD@16..22 "second"
    SPACE@22..23 " "
    OPEN_BRACE@23..24 "{"
    NEWLINE@24..25 "\n"
    SPACE@25..27 "  "
    ENTRY@27..30
      WORD_KEY@27..28
        WORD@27..28 "b"
      SPACE@28..29 " "
      INTEGER@29..30
        NUMERAL@29..30 "2"
    NEWLINE@30..31 "\n"
    CLOSE_BRACE@31..32 "}"
    NEWLINE@32..33 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..5 "first",
            },
            open_brace: OPEN_BRACE@6..7 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@10..11 "a",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@12..13 "1",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@14..15 "}",
        },
        PrefixBlock {
            key: WordKey {
                word: WORD@16..22 "second",
            },
            open_brace: OPEN_BRACE@23..24 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@27..28 "b",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@29..30 "2",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@31..32 "}",
        },
    ],
}
```

vim:ft=markdown
