crates/parser/tests/snapshots/prefix_block/quoted_key.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/quoted_key

## Input

```
"section" {
  key value
}
'other' {
  name hello
}

```

## CST

```
SOURCE_FILE@0..51
  PREFIX_BLOCK@0..26
    QUOTED_KEY@0..9
      DOUBLE_QUOTE@0..1 "\""
      STRING@1..8 "section"
      DOUBLE_QUOTE@8..9 "\""
    SPACE@9..10 " "
    OPEN_BRACE@10..11 "{"
    NEWLINE@11..12 "\n"
    SPACE@12..14 "  "
    ENTRY@14..23
      WORD_KEY@14..17
        WORD@14..17 "key"
      SPACE@17..18 " "
      LINE_STRING@18..23
        STRING@18..23 "value"
    NEWLINE@23..24 "\n"
    CLOSE_BRACE@24..25 "}"
    NEWLINE@25..26 "\n"
  PREFIX_BLOCK@26..51
    QUOTED_KEY@26..33
      SINGLE_QUOTE@26..27 "'"
      STRING@27..32 "other"
      SINGLE_QUOTE@32..33 "'"
    SPACE@33..34 " "
    OPEN_BRACE@34..35 "{"
    NEWLINE@35..36 "\n"
    SPACE@36..38 "  "
    ENTRY@38..48
      WORD_KEY@38..42
        WORD@38..42 "name"
      SPACE@42..43 " "
      LINE_STRING@43..48
        STRING@43..48 "hello"
    NEWLINE@48..49 "\n"
    CLOSE_BRACE@49..50 "}"
    NEWLINE@50..51 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: QuotedKey {
                open_quote: DOUBLE_QUOTE@0..1 "\"",
                string: STRING@1..8 "section",
                close_quote: DOUBLE_QUOTE@0..1 "\"",
            },
            open_brace: OPEN_BRACE@10..11 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@14..17 "key",
                    },
                    value: LineString {
                        string: STRING@18..23 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@24..25 "}",
        },
        PrefixBlock {
            key: QuotedKey {
                open_quote: SINGLE_QUOTE@26..27 "'",
                string: STRING@27..32 "other",
                close_quote: SINGLE_QUOTE@26..27 "'",
            },
            open_brace: OPEN_BRACE@34..35 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@38..42 "name",
                    },
                    value: LineString {
                        string: STRING@43..48 "hello",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@49..50 "}",
        },
    ],
}
```

vim:ft=markdown
