crates/parser/tests/snapshots/prefix_block/trailing_space.snap
---
source: crates/parser/tests/snapshots_prefix_block.rs
---
# prefix_block/trailing_space

## Input

```
section { 
  key value
} 

```

## CST

```
SOURCE_FILE@0..26
  PREFIX_BLOCK@0..26
    WORD_KEY@0..7
      WORD@0..7 "section"
    SPACE@7..8 " "
    OPEN_BRACE@8..9 "{"
    SPACE@9..10 " "
    NEWLINE@10..11 "\n"
    SPACE@11..13 "  "
    ENTRY@13..22
      WORD_KEY@13..16
        WORD@13..16 "key"
      SPACE@16..17 " "
      LINE_STRING@17..22
        STRING@17..22 "value"
    NEWLINE@22..23 "\n"
    CLOSE_BRACE@23..24 "}"
    SPACE@24..25 " "
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..7 "section",
            },
            open_brace: OPEN_BRACE@8..9 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@13..16 "key",
                    },
                    value: LineString {
                        string: STRING@17..22 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@23..24 "}",
        },
    ],
}
```

vim:ft=markdown
